force-app/main/default/objects/Solar_Panel_Item__c/Solar_Panel_Item__c.object-meta.xml
<CustomObject>
    <label>Solar Panel Item</label>
    <nameField>
        <displayFormat>SPI-{0000}</displayFormat>
        <label>Solar Panel Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solar Panel Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>