force-app/main/default/objects/Solar_Panel_Item__c/fields/Solar_Order__c.field-meta.xml
<CustomField>
    <fullName>Solar_Order__c</fullName>
    <label>Solar Order</label>
    <referenceTo>Solar_Order__c</referenceTo>
    <relationshipLabel>Solar Panel Items</relationshipLabel>
    <relationshipName>Solar_Panel_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>