force-app/main/default/objects/Solar_Panel_Item__c/fields/Solar_Panel__c.field-meta.xml
<CustomField>
    <fullName>Solar_Panel__c</fullName>
    <label>Solar Panel</label>
    <referenceTo>Solar_Panel__c</referenceTo>
    <relationshipLabel>Solar Panel Items</relationshipLabel>
    <relationshipName>Solar_Panel_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>