force-app/main/default/objects/Solar_Panel_Item__c/fields/Solar_Panel_Reference__c.field-meta.xml
<CustomField>
    <fullName>Solar_Panel_Reference__c</fullName>
    <formula>Solar_Panel__r.Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solar Panel Reference</label>
    <type>Text</type>
</CustomField>